# qppvm

./: CMakeLists.txt
box_sm/: CogimonRosControl.py  PickBoxPoses.py  PickBoxStateMachine.py  box.world
cfg/: InvDyn.cfg  Qppvm.cfg
config/: centauro.srdf  centauro_simple_example.yaml  cogimon.srdf  cogimon_gazebo.srdf  cogimon_impedance.yaml  cogimon_simple_example.yaml  cogimon_simple_example_gazebo.yaml
config/centauro_floating_base/: centauro_simple_example.yaml
config/cogimon_fixed_base/: cogimon.urdf  cogimon_simple_example.yaml  cogimon_simple_example_gazebo.yaml
config/cogimon_floating_base/: cogimon_simple_example.yaml  cogimon_simple_example_gazebo.yaml
config/fixed_base/: centauro.urdf  centauro_simple_example.yaml
config/floating_base/: centauro.urdf
config/xbot/: centauro_gcomp.yaml
config/xbot/low_level/: centauro_impedance.yaml
include/ForceAccPlugin/: FloatingBaseEstimation.h  ForceAcc.h
include/GcompFixedBase/: GcompFixedBase.h
include/GcompGiusta/: GcompGiusta.h
include/GcompPlugin/: GcompPlugin.h
include/InvDynPlugin/: InvDynPlugin.h
include/QPPVM_RT_plugin/: ForceOptimization.h  ForceOptimization_Humanoids.h  ForceOptimization_L1.h  ForceOptimization_L1d.h  ForceOptimization_L1ds.h  ForceOptimization_Lasso.h  ForceOptimization_MILP.h  ForceOptimization_test.h  OpenSotIkTestPlugin.h  QPPVMPlugin.h  WBTCPlugin.h
include/QPPVM_RT_plugin/OLD_ForceOptimization/: ForceOptimization_L1.h
include/ifopt_problem/: ifopt_contacts.h  ifopt_contacts_local.h  ifopt_contacts_node.h
matlab/: generate_plots_cogimon.m
src/: ForceAcc.cpp  GcompFixedBase.cpp  GcompGiusta.cpp  GcompPlugin.cpp  GlpkTest.cpp  InvDynPlugin.cpp  ModelValidationTest.cpp  OpenSotIkTestPlugin.cpp  QPPVMPlugin.cpp  WBTCPlugin.cpp  ifopt_Test.cpp  ifopt_contacts.cpp  ifopt_contacts_local.cpp  ifopt_contacts_node.cpp
